# salesforce-dataloader-input-preprocessing

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/dataloader-prep/: pre_process_data.py
src/dataloader-prep/operations/: add_lookup_column.py  handle_null_values.py  load_file.py  save_as_csv.py  show_summary.py  split_csv.py
src/dataloader-prep/utils/: cli_input_utils.py  cli_output_utils.py
